--- a/index.html
+++ b/index.html
@@ -721,9 +721,8 @@
                 </div>
             </div>
         </div>
-        <a href="https://api.whatsapp.com/send?phone=5491175049581&text=¡Hola,%20te%20asesoramos%20por
-        %20Whatsapp%20y%20te%20ayudamos%20a%20gestionar%20tu%20compra%20por%20este%20canal!"><i
-                class="fa-brands fa-whatsapp icon-wsp"></i></a>
+        <a href="https://api.whatsapp.com/send?phone=5491175049581&text=¡Hola,%20me%20gustaría%20recibir
+        %20más%20información!"><i class="fa-brands fa-whatsapp icon-wsp"></i></a>
         <div id="scrolltop">
             <a class="top-button" href="#top"><i class="fa-solid fa-chevron-up"></i></a>
         </div>
