Sigo armando el comprar.html y sus archivos relacionados (CSS y JS)

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <li><a href="./templates/tienda.html">Tienda</a></li>
                 <li><a href="#">Contactanos</a></li>
                 <li><a href="#">Dónde Encontrarnos</a></li>
-                <li><a href="">Ingresar</a></li>
+                <!-- <li><a href="">Ingresar</a></li> -->
             </ul>
             <div>
                 <!-- lupita -->
@@ -74,8 +74,6 @@
                         </div>
                     </div>
                 </div>
-
-                
             </div>
         </nav>
     </header>
